# BattleShip

./: BAO_CAO_CHI_TIET.md  BAO_CAO_TOM_TAT.md  DEBUG_LOGIN.md  DEPLOYMENT_GUIDE.md  LAN_SETUP.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMPLETE.md  README_NEW.md  README_SETUP.md  TESTING_CHECKLIST.md  demo.sh  start-all.bat  start-all.sh  start-cpp-only.sh  start-frontend.bat  start-frontend.ps1  start-lan.sh  start-multi.sh  start-node-server.bat  start-node-server.ps1  test-login.html  test-wsl-client.sh
client/: Makefile  README.md  client  client.c
client-lib/: Makefile  README.md  battleship_client.c  battleship_client.h
frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App_new.css  App_new.jsx  config.js  index.css
frontend/src/components/: AvailablePlayers.jsx  ChatBox.css  ChatBox.jsx  GameBoard.css  GameBoard.jsx  GameScreen.css  GameScreen.jsx  Leaderboard.css  Leaderboard.jsx  LobbyScreen.css  LobbyScreen.jsx  LoginScreen.css  LoginScreen.jsx  MainMenu.jsx  MatchHistory.css  MatchHistory.jsx  (+4 more)
node-server/: .env.example  README.md  package-lock.json  package.json  server.js  test-challenge.js  test-connection.js  test-login.js  test.txt
qt-client/: CMakeLists.txt  ConnectionWidget.cpp  ConnectionWidget.h  GameClient.cpp  GameClient.h  GameWidget.cpp  GameWidget.h  LobbyWidget.cpp  LobbyWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  README.md
server/: .fuse_hidden000000fb00000009  Makefile  compile.sh  server  server.cpp  server_full  server_full.cpp
(+4 files in other folders)
